force-app/main/default/objects/Medicare_Items__c/Medicare_Items__c.object-meta.xml
<CustomObject>
    <label>Medicare Item</label>
    <nameField>
        <label>Medicare Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medicare Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>