force-app/main/default/objects/Medicare_Items__c/fields/Billable_Description__c.field-meta.xml
<CustomField>
    <fullName>Billable_Description__c</fullName>
    <label>Billable Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>