force-app/main/default/objects/Medicare_Items__c/fields/Bulk_Bill_Price__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Bill_Price__c</fullName>
    <label>Bulk Bill Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>