force-app/main/default/objects/Medicare_Items__c/fields/Discounted_IUI_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_IUI_Price__c</fullName>
    <label>Discounted IUI Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>