force-app/main/default/objects/Medicare_Items__c/fields/Doctors_Rate_Bulk_Bill__c.field-meta.xml
<CustomField>
    <fullName>Doctors_Rate_Bulk_Bill__c</fullName>
    <label>Doctors Rate Bulk Bill</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>