force-app/main/default/objects/Medicare_Items__c/fields/FET_FreezeAll_Price__c.field-meta.xml
<CustomField>
    <fullName>FET_FreezeAll_Price__c</fullName>
    <label>Discounted FET/Freeze All Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>