force-app/main/default/objects/Medicare_Items__c/fields/Full_Price__c.field-meta.xml
<CustomField>
    <fullName>Full_Price__c</fullName>
    <label>Full Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>