force-app/main/default/objects/Medicare_Items__c/fields/Medical_Egg_Freeze_Price__c.field-meta.xml
<CustomField>
    <fullName>Medical_Egg_Freeze_Price__c</fullName>
    <label>Medical Egg Freeze Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>