force-app/main/default/objects/Medicare_Items__c/fields/Medicare_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Item_Number__c</fullName>
    <label>Medicare Item Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>