force-app/main/default/objects/Medicare_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Medicare_Item_Number__c</columns>
    <columns>NAME</columns>
    <columns>Full_Price__c</columns>
    <columns>Bulk_Bill_Price__c</columns>
    <columns>Discounted_IUI_Price__c</columns>
    <columns>FET_FreezeAll_Price__c</columns>
    <columns>Medical_Egg_Freeze_Price__c</columns>
    <columns>Doctors_Rate_Full_Price__c</columns>
    <columns>Doctors_Rate_Bulk_Bill__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>