force-app/main/default/objects/Medicare_Items__c/listViews/allSelection_Medicare_Items.listView-meta.xml
<ListView>
    <fullName>allSelection_Medicare_Items</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>